<resources>
    <string name="app_name">Pale Soccer Field - Admin</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Profile -->
    <string name="nickname">
        Apodo
    </string>
    <string name="phone">
        Teléfono
    </string>
    <string name="age">
        Edad
    </string>
    <string name="fechaNto">
        Fecha nto
    </string>
    <string name="classification">
        Clasificación
    </string>
    <string name="nicknameText">
        Josucho
    </string>
    <string name="phoneText">
        8465-2109
    </string>
    <string name="ageText">
        21
    </string>
    <string name="classificationText">
        Bueno
    </string>
    <string name="playerName">
    Josue Santos
    </string>
    <string name="backButtonDescription">
    Go back.
    </string>
    <string name="peopleButtonDescription">
    Obliqued users.
    </string>
    <string name="attributeBackgroundDesc">
    Background container for player attributes
    </string>
    <string name="nickEditBtn">
    Edit nickname
    </string>
    <string name="phoneEditBtn">
    Edit phone
    </string>
    <string name="ageEditBtn">
    Edit age
    </string>
    <string name="classEditBtn">
    Edit edit classification
    </string>

    <!--Aprove Users-->
    <string name="acceptBtnDesc">
        Accept user
    </string>
    <string name="rejectBtnDesc">
        Reject user
    </string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="no_hay_personas_bloqueadas">No hay personas bloqueadas</string>
    <string name="cargando">Cargando...</string>
    <string name="personas_bloqueadas">Personas Bloqueadas</string>
    <string name="todas_las_personas">Todas las Personas</string>
    <string name="desbloquear">Desbloquear</string>
    <string name="bloquear">Bloquear</string>
    <string name="c_mo_califica_a_este_jugador">¿Cómo califica a este Jugador?</string>
    <string name="select_time">Seleccionar horario</string>
    <string name="select_manager">Seleccionar</string>
    <string name="public_private_switch_label" />
    <string name="i_have_team_label" />
    <string name="add_player_to_team" />
    <string name="add_player_to_challenger" />
    <string name="fecha">Fecha:</string>
    <string name="crear">Crear</string>
    <string name="agregar">Agregar</string>
    <string name="icon_to_send_messages_to_user">Icon to send messages to user</string>
    <string name="hay_usuarios_por_aceptar">Hay usuarios por aceptar</string>
    <string name="desea_visitar_la_lista_de_usuarios_por_aprobar">¿Desea visitar la lista de usuarios por aprobar?</string>
    <string name="cancelar">Cancelar</string>
    <string name="visitar">Visitar</string>
    <string name="gestion_de_usuarios">Gestion de usuarios</string>
    <string name="buscar_usuarios">Buscar usuarios</string>
    <string name="aprobar_usuarios">Aprobar usuarios</string>
    <string name="registrar_usuarios">Registrar usuarios</string>
    <string name="gestion_de_reservas">Gestion de Reservas</string>
    <string name="calendario_de_reservas">Calendario de Reservas</string>
    <string name="historial_de_reservas">Historial de reservas</string>
    <string name="registrar_horarios">Registrar Horarios</string>
    <string name="aprobar_reservas">Aprobar Reservas</string>
    <string name="editar_agregar_eliminar">Editar / Agregar / Eliminar</string>
    <string name="otros">Otros</string>
    <string name="cuenta">Cuenta</string>
    <string name="aprobar_rese_as">Aprobar reseñas</string>
    <string name="gestion_de_promociones">Gestion de Promociones</string>
    <string name="gestion_de_eventos_especiales">Gestion de Eventos Especiales</string>
    <string name="eliminar_mi_cuenta">Eliminar mi cuenta</string>
    <string name="log_out">Log out</string>
    <string name="todo">TODO</string>
    <string name="posiciones">Posiciones</string>
    <string name="loading_comments">Loading comments…</string>
    <string name="apodo_tp">Apodo:</string>
    <string name="nombre_tp">Nombre:</string>
    <string name="cargando_usuarios">No se han encontrado usuarios</string>
</resources>