<?xml version="1.0" encoding="utf-8"?>
<!-- Auto layout, variables, and unit scale are not yet supported -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frame_6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:background="#2F80ED"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="67dp"
            android:layout_height="48dp"
            android:background="@null"
            android:contentDescription="@string/backButtonDescription"
            android:src="@drawable/arrow_back" />
        <View
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            >
        </View>
        <ImageButton
            android:id="@+id/bloquedPeopleButton"
            android:layout_width="67dp"
            android:layout_height="48dp"
            android:background="@null"
            android:contentDescription="@string/peopleButtonDescription"
            android:src="@drawable/people_icon" />
    </LinearLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView2"
        android:layout_width="182dp"
        android:layout_height="182dp"
        android:layout_gravity="center"
        android:padding="5dp"

        android:src="@drawable/profile"
        app:shapeAppearanceOverlay="@style/circular"
        app:strokeColor="#FFF"
        app:strokeWidth="3dp"
       />

    <TextView
        android:id="@+id/playerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="top"
        android:text="@string/playerName"
        android:textAppearance="@style/profileName" />

    <Spinner
        android:id="@+id/spinnerPositions"
        style="@style/SpinnerStyle"
        android:layout_width="224dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:background="@drawable/custom_stroke_profile"
        android:dropDownSelector="@color/white"
        android:popupBackground="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="22dp"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="22dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/profile_data_background"
                android:contentDescription="@string/attributeBackgroundDesc" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/apodo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/nickname"
                    android:layout_weight="1"
                    style="@style/profileAttributes"
                     />

                <TextView
                    android:id="@+id/nicknameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/nicknameText"
                    android:layout_weight="1"
                    android:textAppearance="@style/profileAttributesText"
                    />
                <ImageButton
                    android:id="@+id/editNickBtn"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:layout_gravity="center"
                    android:contentDescription="@string/nickEditBtn"
                    android:src="@drawable/edit_icon" />

            </LinearLayout>

        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="14dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/profile_data_background"
                android:contentDescription="@string/attributeBackgroundDesc" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/telefono"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/phone"
                    android:layout_weight="1"
                    style="@style/profileAttributes"
                    />

                <TextView
                    android:id="@+id/telefonoText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/phoneText"
                    android:layout_weight="1"
                    android:textAppearance="@style/profileAttributesText"
                    />
                <ImageButton
                    android:id="@+id/editPhoneBtn"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:layout_gravity="center"
                    android:contentDescription="@string/phoneEditBtn"
                    android:src="@drawable/edit_icon" />

            </LinearLayout>

        </FrameLayout>
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="14dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/profile_data_background"
                android:contentDescription="@string/attributeBackgroundDesc" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/edad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/age"
                    android:layout_weight="1"
                    style="@style/profileAttributes" />

                <TextView
                    android:id="@+id/edadText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/ageText"
                    android:textAppearance="@style/profileAttributesText" />
                <ImageButton
                    android:id="@+id/editAgeBtn"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:layout_gravity="center"
                    android:contentDescription="@string/ageEditBtn"
                    android:src="@drawable/edit_icon" />

            </LinearLayout>

        </FrameLayout>
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="14dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/profile_data_background"
                android:contentDescription="@string/attributeBackgroundDesc" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/clasificacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/classification"
                    android:layout_weight="1"
                    style="@style/profileAttributes" />

                <TextView
                    android:id="@+id/clasificacionText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/classificationText"
                    android:layout_weight="2"
                    android:textAppearance="@style/profileAttributesText"
                    />
                <ImageButton
                    android:id="@+id/editClassBtn"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:layout_gravity="center"
                    android:contentDescription="@string/classEditBtn"
                    android:src="@drawable/edit_icon" />

            </LinearLayout>

        </FrameLayout>



    </LinearLayout>


</LinearLayout>


