<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarAproveReservations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/arrow_back_white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Crear Reserva"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="112dp"
            tools:layout_editor_absoluteY="18dp" />
    </androidx.appcompat.widget.Toolbar>


    <Spinner
        android:id="@+id/spinnerHorario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:prompt="@string/select_time"/>



    <!-- Botón para seleccionar el encargado -->
    <TextView
        android:id="@+id/tvEncargado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Encargado: " />

    <Button
        android:id="@+id/btnSeleccionarEncargado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/select_manager"/>

    <!-- Switch para definir si la reserva es pública o privada -->
    <Switch
        android:id="@+id/switchPublicoPrivado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/public_private_switch_label"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <!-- Lista de jugadores del equipo -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerJugadoresEquipo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <!-- Lista de jugadores retadores -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerJugadoresRetadores"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <!-- Opción "Tengo equipo" -->
    <CheckBox
        android:id="@+id/checkTengoEquipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/i_have_team_label"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <Button
        android:id="@+id/btnAgregarJugadorEquipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="@string/add_player_to_team"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    <Button
        android:id="@+id/btnAgregarJugadorRetador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="16dp"
        android:text="@string/add_player_to_challenger"/>
    </LinearLayout>
    <!-- Botones para agregar jugadores a los equipos -->


    <Button
        android:id="@+id/btn_aceptar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Aceptar" />

</LinearLayout>