<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".blockedUserList.BlockedUsersList">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarBlockedUsers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:navigationIcon="@drawable/arrow_back_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Usuarios bloqueados"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="112dp"
            tools:layout_editor_absoluteY="18dp" />
    </androidx.appcompat.widget.Toolbar>
    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchViewBUL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:iconifiedByDefault="false" />

    <RadioGroup
        android:id="@+id/radioGroupFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioBlocked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/personas_bloqueadas"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radioAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/todas_las_personas" />
    </RadioGroup>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:layout_weight="1">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewBlockedUsers"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </ScrollView>
    <TextView
        android:id="@+id/textViewNoBlockedUsers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/no_hay_personas_bloqueadas"
        android:visibility="gone"
    />
    <ProgressBar
        android:id="@+id/progressBarLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
    />

    <ProgressBar
        android:id="@+id/radioProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/loadingMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radioProgressBar"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:text="@string/cargando" />


</LinearLayout>
