<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp"
    android:layout_marginTop="2dp"
    android:layout_marginBottom="2dp"
    android:background="@drawable/border_background">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:orientation="vertical"
        android:layout_marginStart="1dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="1dp">

            <TextView
                android:id="@+id/tv_user_name_Blocked_Users_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_weight="0"
                android:layout_marginEnd="5dp"
                android:text="@string/nombre_tp"/>
            <TextView
                android:id="@+id/user_name_Blocked_Users_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="1dp">
            <TextView
                android:id="@+id/tv_user_nickname_Blocked_Users_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_weight="0"
                android:layout_marginEnd="5dp"
                android:text="@string/apodo_tp"/>
            <TextView
                android:id="@+id/user_nickname_Blocked_Users_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_weight="1"
                android:text="Diego Carrillo"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Botón para desbloquear usuario -->
    <ImageButton
        android:id="@+id/blockButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/baseline_block_24"
        android:backgroundTint="#fffbfe"
        android:text="@string/bloquear" />
</LinearLayout>
